tests/rosetta/out/Smalltalk/arithmetic-rational.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-rational.st:40: parse error, expected '|' or identifier
